--- a/Weather App/html/index.html
+++ b/Weather App/html/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="shortcut icon" href="/Weather App/images/clear.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/clear.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/index.css">
 </head>
 
@@ -14,7 +14,7 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter City name" spellcheck="false">
-            <button><img src="/Weather App/images/search.png"></button>
+            <button><img src="../images/search.png"></button>
         </div>
         <div class="error">
             <p>Invalid City Name</p>
@@ -23,18 +23,18 @@
             <div class="container">
                 <div class="weatherDetails1">
                     <h2 class="city">Ujjain</h2>
-                    <img src="/Weather App/images/rain.png" class="weather-icon">
+                    <img src="../images/rain.png" class="weather-icon">
                     <h1 class="temp">22°c</h1>
                     <div class="details">
                         <div class="col">
-                            <img src="/Weather App/images/humidity.png">
+                            <img src="../images/humidity.png">
                             <div>
                                 <p class="humidity">50%</p>
                                 <p>Humidity</p>
                             </div>
                         </div>
                         <div class="col">
-                            <img src="/Weather App/images/wind.png">
+                            <img src="../images/wind.png">
                             <div>
                                 <p class="wind">15km/h</p>
                                 <p>Wind speed</p>
@@ -64,7 +64,7 @@
         </div>
     </div>
 
-    <script src="/Weather App/js/index.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 
 </html>
